--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <div class="container">
       <div class="card">
-        <img src="assets\images\image-omelette.jpeg" alt="YUMMMY!!!" />
+        <img src="assets\images\image-omelette.jpeg" alt="Omelette!!!" />
 
         <h1>Simple Omelette Recipe</h1>
         <p>
