--- a/index.html
+++ b/index.html
@@ -18,121 +18,130 @@
     <div class="container">
       <div class="card">
         <img src="assets\images\image-omelette.jpeg" alt="Omelette!!!" />
-
-        <h1>Simple Omelette Recipe</h1>
-        <p>
-          An easy and quick dish, perfect for any meal. This classic omelette
-          combines beaten eggs cooked to perfection, optionally filled with your
-          choice of cheese, vegetables, or meats.
-        </p>
-
-        <div class="time">
-          <h4>Preparation time</h4>
-          <ul>
-            <li><b>Total</b>: Approximately 10 minutes</li>
-            <li><b>Preparation</b>: 5 minutes</li>
-            <li><b>Cooking</b>: 5 minutes</li>
-          </ul>
-        </div>
-
-        <div class="ingredients">
-          <h2>Ingredients</h2>
-          <ul>
-            <li>2-3 large eggs</li>
-            <li>Salt, to taste</li>
-            <li>Pepper, to taste</li>
-            <li>1 tablespoon of butter or oil</li>
-            <li>
-              Optional fillings: cheese, diced vegetables, cooked meats, herbs
-            </li>
-          </ul>
-        </div>
-
-        <hr />
-
-        <div class="instructions">
-          <h2>Instructions</h2>
-          <ol>
-            <li>
-              <p>
-                <strong>Beat the eggs</strong>: In a bowl, beat the eggs with a
-                pinch of salt and pepper until they are well mixed. You can add
-                a tablespoon of water or milk for a fluffier texture.
-              </p>
-            </li>
-
-            <li>
-              <p>
-                <strong>Heat the pan</strong>: Place a non-stick frying pan over
-                medium heat and add butter or oil.
-              </p>
-            </li>
-
-            <li>
-              <p>
-                <strong>Cook the omelette</strong>: Once the butter is melted
-                and bubbling, pour in the eggs. Tilt the pan to ensure the eggs
-                evenly coat the surface.
-              </p>
-            </li>
-
-            <li>
-              <p>
-                <strong>Add fillings (optional)</strong>: When the eggs begin to
-                set at the edges but are still slightly runny in the middle,
-                sprinkle your chosen fillings over one half of the omelette.
-              </p>
-            </li>
-
-            <li>
-              <p>
-                <strong>Fold and serve</strong>: As the omelette continues to
-                cook, carefully lift one edge and fold it over the fillings. Let
-                it cook for another minute, then slide it onto a plate.
-              </p>
-            </li>
-
-            <li>
-              <p>
-                <strong>Enjoy</strong>: Serve hot, with additional salt and
-                pepper if needed.
-              </p>
-            </li>
-          </ol>
-        </div>
-
-        <hr />
-
-        <div class="nut">
-          <h2>Nutrition</h2>
+        <div class="mobile">
+          <h1>Simple Omelette Recipe</h1>
           <p>
-            The table below shows nutritional values per serving without the
-            additional fillings.
+            An easy and quick dish, perfect for any meal. This classic omelette
+            combines beaten eggs cooked to perfection, optionally filled with
+            your choice of cheese, vegetables, or meats.
           </p>
 
-          <table>
-            <tr>
-              <td class="name">Calories</td>
-              <td class="value">277kcal</td>
-            </tr>
-            <tr>
+          <div class="time">
+            <h4>Preparation time</h4>
+            <ul>
+              <li>
+                <p><b>Total</b>: Approximately 10 minutes</p>
+              </li>
+
+              <li>
+                <p><b>Preparation</b>: 5 minutes</p>
+              </li>
+              <li>
+                <p><b>Cooking</b>: 5 minutes</p>
+              </li>
+            </ul>
+          </div>
+
+          <div class="ingredients">
+            <h2>Ingredients</h2>
+            <ul>
+              <li>2-3 large eggs</li>
+              <li>Salt, to taste</li>
+              <li>Pepper, to taste</li>
+              <li>1 tablespoon of butter or oil</li>
+              <li>
+                Optional fillings: cheese, diced vegetables, cooked meats, herbs
+              </li>
+            </ul>
+          </div>
+
+          <hr />
+
+          <div class="instructions">
+            <h2>Instructions</h2>
+            <ol>
+              <li>
+                <p>
+                  <strong>Beat the eggs</strong>: In a bowl, beat the eggs with
+                  a pinch of salt and pepper until they are well mixed. You can
+                  add a tablespoon of water or milk for a fluffier texture.
+                </p>
+              </li>
+
+              <li>
+                <p>
+                  <strong>Heat the pan</strong>: Place a non-stick frying pan
+                  over medium heat and add butter or oil.
+                </p>
+              </li>
+
+              <li>
+                <p>
+                  <strong>Cook the omelette</strong>: Once the butter is melted
+                  and bubbling, pour in the eggs. Tilt the pan to ensure the
+                  eggs evenly coat the surface.
+                </p>
+              </li>
+
+              <li>
+                <p>
+                  <strong>Add fillings (optional)</strong>: When the eggs begin
+                  to set at the edges but are still slightly runny in the
+                  middle, sprinkle your chosen fillings over one half of the
+                  omelette.
+                </p>
+              </li>
+
+              <li>
+                <p>
+                  <strong>Fold and serve</strong>: As the omelette continues to
+                  cook, carefully lift one edge and fold it over the fillings.
+                  Let it cook for another minute, then slide it onto a plate.
+                </p>
+              </li>
+
+              <li>
+                <p>
+                  <strong>Enjoy</strong>: Serve hot, with additional salt and
+                  pepper if needed.
+                </p>
+              </li>
+            </ol>
+          </div>
+
+          <hr />
+
+          <div class="nut">
+            <h2>Nutrition</h2>
+            <p>
+              The table below shows nutritional values per serving without the
+              additional fillings.
+            </p>
+
+            <table>
+              <tr>
+                <td class="name">Calories</td>
+                <td class="value">277kcal</td>
+              </tr>
+              <tr>
+                <td colspan="2"><hr /></td>
+              </tr>
+              <tr>
+                <td class="name">Carbs</td>
+                <td class="value">0g</td>
+              </tr>
               <td colspan="2"><hr /></td>
-            </tr>
-            <tr>
-              <td class="name">Carbs</td>
-              <td class="value">0g</td>
-            </tr>
-            <td colspan="2"><hr /></td>
-            <tr>
-              <td class="name">Protein</td>
-              <td class="value">20g</td>
-            </tr>
-            <td colspan="2"><hr /></td>
-            <tr>
-              <td class="name">Fat</td>
-              <td class="value">22g</td>
-            </tr>
-          </table>
+              <tr>
+                <td class="name">Protein</td>
+                <td class="value">20g</td>
+              </tr>
+              <td colspan="2"><hr /></td>
+              <tr>
+                <td class="name">Fat</td>
+                <td class="value">22g</td>
+              </tr>
+            </table>
+          </div>
         </div>
       </div>
     </div>
